[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluesky_mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=0.1.0",
    "atproto>=0.0.47",
    "pydantic>=2.0.0"
]

[project.scripts]
bluesky-mcp = "bluesky_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bluesky_mcp"]